update pictures & media

--- a/index.html
+++ b/index.html
@@ -8,24 +8,30 @@
 </head>
 <body>
     <header>
-        <h1> Discover hidden places around you in the world</h1>
+        <h1> Discover hidden places in the world around you</h1>
         <a href="#">Download Excursion (Coming soon!)</a>
     </header>
     <main>
-        <figure>
-            <img>
-        </figure>
+        <div>
+            <p>
+            <video width="auto" height="auto" autoplay>
+                <source src="resources/videos/excursion.mp4" type="video/mp4">
+                <source src="resources/videos/excursion.ogg" type="video/ogg">
+                Your browser does not support the video tag.
+            </video>
+            </p>
+        </div>
         <h3>Your personal travel guide</h3>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-        <figure>
-            <img>
-            <img>
-        </figure>
+        <div>
+            <p><img src="resources/images/camp.jpg" alt="camp with light"></p>
+            <p><img src="resources/images/phone.png" alt="phone"></p>
+        </div>
         <h3>Coming soon for IPhone and Android</h3>
     </main>
     <footer>
         <a href="#">Download Excursion (Coming soon!)</a>
-        <p>Excursion</p>
+        <p>&#169 Excursion</p>
     </footer>
 </body>
 </html>
