fix issue media not playing in chrome

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <main>
         <div>
             <p>
-            <video width="auto" height="auto" autoplay>
+            <video autoplay muted loop>
                 <source src="resources/videos/excursion.mp4" type="video/mp4">
-                <source src="resources/videos/excursion.ogg" type="video/ogg">
                 Your browser does not support the video tag.
             </video>
             </p>
